# FlightSimulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Config.h  main.cpp  simulator.cpp  simulator.h  stats_tracker.cpp  stats_tracker.h
src/charger/: CMakeLists.txt  charger.h  fifs_evtol_charger.cpp
src/vehicle/: CMakeLists.txt  evtol.cpp  evtol.h  vehicle.h  vehicle_factory.cpp  vehicle_factory.h
test/: CMakeLists.txt  charger_test.cpp  evtol_test.cpp  test_util.h
